2005-05-25  Alexey Shchepin  <alexey@sevcom.net>

	* src/msgs/pt-br.msg: New Brazilian Portuguese translation (thanks
	to Felipe Brito Vasconcellos)

2005-05-23  Alexey Shchepin  <alexey@sevcom.net>

	* (all): ejabberd-0.9.1 released

	* src/msgs/fr.msg: Updated (thanks to Mickael Remond)

	* src/odbc/Makefile.in: Added

	* src/configure.ac: Updated for odbc support
	* src/Makefile.in: Likewise

	* src/aclocal.m4: Bugfix

	* src/mod_last_odbc.erl: Added store_last_info/4 function (thanks
	to Sergei Golovan)
	* src/mod_last.erl: Likewise

	* src/jd2ejd.erl: Support for exporting iq:last information,
	better error handling (thanks to Sergei Golovan)

	* src/ejabberd_ctl.erl: Added "import-file" and "import-dir"
	commands (thanks to Sergei Golovan)

	* doc/guide.tex: Updated (thanks to Sergei Golovan)
	* doc/dev.tex: Likewise
	* doc/disco.png: Likewise
	* doc/discorus.png: Likewise
	* doc/webadmin.png: Likewise
	* doc/webadminru.png: Likewise

	* src/msgs/ru.msg: Updated (thanks to Sergei Golovan)
	* src/msgs/uk.msg: Likewise

	* src/web/ejabberd_web_admin.erl: Updated CSS, added modules
	management, fixed bug with configuring of listened ports on
	different nodes (thanks to Sergei Golovan)

	* src/gen_mod.erl: Added function loaded_modules_with_opts/0, new
	API for module stopping (thanks to Sergei Golovan)
	* src/mod_muc/mod_muc.erl: Moved a process name to a macros,
	updated module stopping (thanks to Sergei Golovan)
	* src/mod_irc/mod_irc.erl: Likewise
	* src/mod_pubsub/mod_pubsub.erl: Likewise
	* src/mod_announce.erl: Updated module stopping (thanks to Sergei
	Golovan)
	* src/mod_echo.erl: Likewise
	* src/mod_offline.erl: Likewise

	* src/web/ejabberd_http.erl: "Connection:" header value now
	matched case-insensitive, and returned to client, replaced
	duplicate is_space($\r) with is_space($\t) (thanks to Maxim
	Ryazanov)

2005-05-21  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_pubsub/mod_pubsub.erl: Fixed XML element name for