@@ -1,3 +1,7 @@
+2005-05-28  Alexey Shchepin  <alexey@sevcom.net>
+
+	* src/web/ejabberd_web_admin.erl: Bugfix
+
 2005-05-25  Alexey Shchepin  <alexey@sevcom.net>
 
 	* src/msgs/pt-br.msg: New Brazilian Portuguese translation (thanks
